 - [DEV-262] added group filtering  for "Trigger info" (Artem)
 - [DEV-259] added internal links (Artem)
 - [DEV-251] added improved screen editing (Artem)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.2

 - [ZBX-395] fixed item list for simple graph (Artem)
 - [ZBX-334] added sorting to group list in elements copy form (Artem)
 - [ZBX-509] fixed problem with user rights to hostgroup without any host (Artem)
 - [ZBX-564] added more descriptive message on conflict of templates (Artem)
 - [ZBX-443] removed excess space after detail messages (Artem)
 - [ZBX-526] fixed graphs on screens not getting refreshed issue (Artem)
 - [ZBX-531] fixed plain text line wrapping (Artem)
 - [ZBX-551] updated german language file (Artem)
 - [ZBX-554] added proxy host info in export/import (Artem)
 - [ZBX-638] fixed deleting applications on host remove (Artem)
 - [ZBX-636] removed "Keep trends (in days)" from Item Configuration form if "Type of information" is Character, Log or Text (Artem)
 - [ZBX-608] added sorting to templates column in hosts screen (Artem)
 - [ZBX-635] improved escalations to stop if host, item or trigger is disabled (Sasha)
 - [ZBX-632] fixed sql query in map elements configuration form (Artem)
 - [ZBX-631] fixed incorrect incoming string values if using dbcache (Sasha)
 - [ZBX-630] improved log files view in BB theme (Artem)
 - [ZBX-629] fixed sql error in popup window (Artem)
 - [DEV-271] fixed graphs out of bounds problem (Artem)
 - [ZBX-628] fixed memory leak in proxy module (Sasha)
 - [ZBX-611] fixed undefined variables in installation wizard (Artem)
 - [ZBX-612] fixed possible incorrect value for host (Artem)
 - [ZBX-627] fixed items update (Artem)
 - [ZBX-625] fixed possible incorrect processing of delta for integers if using dbcache (Sasha)